[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets_2/traps/snakes/appear-disappear/appear_2.png" type="Texture" id=1]
[ext_resource path="res://Assets_2/traps/snakes/appear-disappear/appear_3.png" type="Texture" id=2]
[ext_resource path="res://Assets_2/traps/snakes/appear-disappear/appear_5.png" type="Texture" id=3]
[ext_resource path="res://Assets_2/traps/snakes/attack/hit_2.png" type="Texture" id=4]
[ext_resource path="res://Assets_2/traps/snakes/appear-disappear/appear_1.png" type="Texture" id=5]
[ext_resource path="res://Assets_2/traps/snakes/appear-disappear/appear_4.png" type="Texture" id=6]
[ext_resource path="res://Assets_2/traps/snakes/attack/hit_1.png" type="Texture" id=7]
[ext_resource path="res://Assets_2/traps/snakes/attack/hit_3.png" type="Texture" id=8]
[ext_resource path="res://Assets_2/traps/snakes/attack/hit_4.png" type="Texture" id=9]
[ext_resource path="res://Assets_2/traps/snakes/idle/idle_1.png" type="Texture" id=10]
[ext_resource path="res://Assets_2/traps/snakes/idle/idle_2.png" type="Texture" id=11]
[ext_resource path="res://Assets_2/traps/snakes/idle/idle_6.png" type="Texture" id=12]
[ext_resource path="res://Assets_2/traps/snakes/idle/idle_3.png" type="Texture" id=13]
[ext_resource path="res://Assets_2/traps/snakes/idle/idle_4.png" type="Texture" id=14]
[ext_resource path="res://Assets_2/traps/snakes/idle/idle_5.png" type="Texture" id=15]
[ext_resource path="res://src/Objects/Traps/Snake.gd" type="Script" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "Appear",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "disappear",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33.5111, 21.661 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.645, 23.3194 )

[node name="Snake" type="Area2D"]
collision_layer = 0
script = ExtResource( 16 )

[node name="snake" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
animation = "disappear"

[node name="Detection_area" type="Area2D" parent="."]

[node name="Detect" type="CollisionShape2D" parent="Detection_area"]
position = Vector2( -15.7132, -0.0768585 )
shape = SubResource( 2 )

[node name="Attack" type="CollisionShape2D" parent="."]
position = Vector2( -15.5104, 0.178436 )
shape = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Snake_body_attack_area_entered"]
[connection signal="animation_finished" from="snake" to="." method="_on_snake_animation_finished"]
[connection signal="body_entered" from="Detection_area" to="." method="_on_Detection_area_body_entered"]
[connection signal="body_exited" from="Detection_area" to="." method="_on_Detection_area_body_exited"]
